Test/git-issues/git-issue-859c.dfy.expect
git-issue-859c.dfy(29,8): Error: ghost variables such as s4 are allowed only in specification contexts. s4 was inferred to be ghost based on its declaration or initialization.
1 resolution/type errors detected in git-issue-859c.dfy
